# ASN1spect

./: .gitignore  README.md
python/: setup.cfg
python/ASN1nspect/: ASN1AngrProject.py  AngrProject.py  BinaryLoader.py  Checkpoint.py  IOS.py  ParserReplacer.py  TypeParser.py  __init__.py  __main__.py
python/ASN1nspect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/ASN1nspect/Analysis/: Analysis.py  DebugAnalysis.py  DifferentialEnumerationAnalysis.py  EnumerationAnalysis.py  IncompleteTypeGeneration.py  NonEnforcedConstraintAnalysis.py  RecursiveTypeAnalysis.py
python/ASN1nspect/ComparisonStrategies/: ASN1CConstraintComparison.py  __init__.py  srsRANConstraintComparison.py
python/ASN1nspect/FieldMatchers/: ASN1CFieldMatcherStrategy.py  FieldMatcherStrategy.py
python/ASN1nspect/asn1c/: Constraints.py  Member.py  Operations.py  StructureKind.py  Type.py  __init__.py  utils.py
python/ASN1nspect/srsRAN/: Analyze.py  Structure.py  __init__.py
python/ASN1spect/: ASN1AngrProject.py  BinaryLoader.py  Checkpoint.py  IOS.py  ParserReplacer.py  RepoParser.py  TypeParser.py  __init__.py  __main__.py
python/ASN1spect/Analysis/: Analysis.py  DebugAnalysis.py  DifferentialEnumerationAnalysis.py  EnumerationAnalysis.py  IncompleteTypeGeneration.py  NonEnforcedConstraintAnalysis.py  RecursiveTypeAnalysis.py
python/ASN1spect/ComparisonStrategies/: ASN1CConstraintComparison.py  (+3 more)
python/GitHub_Study/: GitHubAnalysis.py  GitHubClone.py  GitHubCompile.py  ProjectComparator.py  __main__.py
python/examples/: run_registered_analyses.py
(+2164 files in other folders)
