[metadata]
name = ASN1spect
version = attr: ASN1spect.__version__
url = https://github.com/wspr-ncsu/ASN1spect
# classifiers = # TODO
#     License :: OSI Approved :: BSD License
#     Programming Language :: Python :: 3
#     Programming Language :: Python :: 3.12
# license = BSD 2 Clause
# license_files = LICENSE
description = A tool to identify vulnerabilities in asn1c generated code
long_description = file: README.md
long_description_content_type = text/markdown
author = Seaver Thorn
author_email = swthorn@ncsu.edu

[options.package_data]
ASN1spect = data/*
GitHub_Study = data/*

[options]
install_requires =
	angr
	arpy
	cxxfilt
	cxxheaderparser
	pytest
	z3-solver
	click
	redis
	unicorn
	setuptools
	tqdm
	fasteners
	pygithub
	requests
python_requires = >= 3.12
packages = find:

[options.entry_points]
console_scripts =
	ASN1spect = ASN1spect.__main__:main
	GitHub_Study = GitHub_Study.__main__:main
